[project]
name = "zt-runner"
version = "2.0.0"
description = "RHDP Zero Touch Ansible Runner API for lab grading"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Red Hat Product Demo System" },
]

dependencies = [
    "ansible~=9.1",
    "ansible-runner~=2.3",
    "cryptography>=44.0",
    "flask~=3.0",
    "flask-cors~=4.0",
    "gevent>=24.11",
    "gunicorn~=23.0",
    "Jinja2~=3.1",
    "jmespath",
    "kubernetes",
    "netaddr",
    "PyYAML~=6.0",
]

[project.urls]
Homepage = "https://github.com/rhpds/rhpds-zt-runner"
Repository = "https://github.com/rhpds/rhpds-zt-runner"
